Prepare components to display recording-act-editor

--- a/src/app/views/registration/recording-book/book-entry-edition.component.html
+++ b/src/app/views/registration/recording-book/book-entry-edition.component.html
@@ -21,6 +21,7 @@
       [instrumentRecording]="instrumentRecording"
       [recordingActs]="recordingActs"
       [showCopyToClipboard]="true"
+      [showRecordingActLink]="true"
       title="Predios y actos jurídicos registrados en esta inscripción"
       (recordingActsListEvent)="onRecordingActsListEvent($event)">
 
