--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -10,12 +10,17 @@
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
-      <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
+      <td mat-cell *matCellDef="let row">
+        <a class="link" (click)="onOpenRecordingActEditor(row)" *ngIf="showRecordingActLink">
+          {{ row.name }}
+        </a>
+        <span *ngIf="!showRecordingActLink">{{ row.name }}</span>
+      </td>
     </ng-container>
     <ng-container matColumnDef="electronicID">
       <th mat-header-cell *matHeaderCellDef> Folio electrónico </th>
       <td mat-cell *matCellDef="let row" [style.width.px]="170">
-        <a class="link" (click)="onOpenRecordingActEditor(row)">
+        <a class="link" (click)="onOpenRecordableSubjactTabbedView(row)">
           {{ row.recordableSubject.electronicID }}
         </a>
       </td>
